--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Learning Mongo, Node, express",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "start:dev": "nodemon server.js",
     "start:prod": "set NODE_ENV=production && nodemon server.js",
     "debug": "ndb server.js",
     "watch": "esbuild ./public/js/index.js --bundle --outfile=./public/js/bundle.js --watch",
-    "build": "esbuild ./public/js/index.js --bundle --outfile=./public/js/bundle.js",
-    "start": "node server.js"
+    "build": "esbuild ./public/js/index.js --bundle --outfile=./public/js/bundle.js"
   },
   "author": "Jhanvi Kotak",
   "license": "ISC",
@@ -51,5 +51,8 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.2.0"
+  },
+  "engines": {
+    "node": ">=20.10.0"
   }
 }
