--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "natour",
   "version": "1.0.0",
   "description": "Learning Mongo, Node, express",
-  "main": "index.js",
+  "main": "server.js",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "start": "node server.js",
